Made changes o the env.example

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,5 @@
-# Server Configuration
 PORT=3000
 NODE_ENV=development
-
-# Database Configuration
-# For local MongoDB:
-# MONGODB_URI=mongodb://localhost:27017/blog-api
-#
-# For MongoDB Atlas (cloud):
-# MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/blog-api?retryWrites=true&w=majority
-MONGODB_URI=mongodb://localhost:27017/blog-api
-
-# JWT Authentication
-# Use a strong, random string (at least 32 characters)
-# You can generate one using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+MONGODB_URI=MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database>?retryWrites=true&w=majority 
+#For local development use: MONGODB_URI=mongodb://localhost:27017/name-of-your-db
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
